episodes/103/manifests/workloads/team-a.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: org-1

---
apiVersion: v1
kind: Pod
metadata:
  name: team-a
  namespace: org-1
  labels:
    run: nginx
    app: team-a
spec:
  containers:
    - image: joshrosso/nginx-curl:v2
      imagePullPolicy: IfNotPresent
      name: nginx

---
apiVersion: v1
kind: Service
metadata:
 name: team-a
 namespace: org-1
spec:
 type: NodePort
 ports:
 - port: 80
   name: http
   protocol: TCP
   targetPort: 80
 selector:
   app: team-a
